🐳 chore: 修改vscode编译环境

--- a/packages/xgen/tsconfig.json
+++ b/packages/xgen/tsconfig.json
@@ -1,6 +1,10 @@
 {
-      "extends": "./.umi/tsconfig.json",
+  "extends": "./.umi/tsconfig.json",
 	"compilerOptions": {
+		"jsx": "react-jsx",
 		"experimentalDecorators": true,
+		"paths": {
+			"@/*": ["./*"]
+		}
 	}
 }
