--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,30 @@
 {
-  // 使用 IntelliSense 了解相关属性。 
-  // 悬停以查看现有属性的描述。
-  // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "msedge",
-      "request": "launch",
-      "name": "Launch Edge against localhost",
-      "url": "http://192.168.3.106:8000", //你自己的项目运行地址
-      "webRoot": "${workspaceFolder}/package/xgen"
-    }
-  ]
+	// 使用 IntelliSense 了解相关属性。
+	// 悬停以查看现有属性的描述。
+	// 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "Launch Chrome",
+			"request": "launch",
+			"type": "chrome",
+			"url": "http://localhost:8000",
+			"webRoot": "${workspaceFolder}",
+			"sourceMapPathOverrides": {
+				"webpack://xgen/*": "${workspaceFolder}/packages/xgen/*",
+				"webpack://xgen/**/*": "${workspaceFolder}/packages/xgen/**/*"
+			}
+		},
+
+		{
+			"type": "msedge",
+			"request": "launch",
+			"name": "Launch Edge against localhost",
+			"url": "http://127.0.0.1:8000", //你自己的项目运行地址
+			"webRoot": "${workspaceFolder}",
+			"sourceMapPathOverrides": {
+				"webpack://xgen/*": "${webRoot}/xgen/*"
+			}
+		}
+	]
 }
