--- a/packages/editorjs_plugins/package.json
+++ b/packages/editorjs_plugins/package.json
@@ -44,7 +44,7 @@
       "devDependencies": {
             "@rollup/plugin-commonjs": "^24.0.1",
             "@rollup/plugin-node-resolve": "^15.0.1",
-            "@swc/core": "^1.3.23",
+            "@swc/core": "1.3.75",
             "@types/lodash-es": "^4.17.6",
             "@types/mustache": "^4.2.2",
             "rollup": "^3.7.4",
